Changed title and authors
I changed the title and authors so it wouldn't just be the placeholder names.

--- a/index.html
+++ b/index.html
@@ -61,20 +61,20 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="xtitle is-1 publication-title">Academic Project Page</h1>
+            <h1 class="xtitle is-1 publication-title">Autism Detection</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://dreamworks-penguins.fandom.com/wiki/Skipper" target="_blank">Author 1</a></span>
+                <a href="https://dreamworks-penguins.fandom.com/wiki/Skipper" target="_blank">Brice Jiang</a></span>
                 <span class="author-block">
-                  <a href="https://dreamworks-penguins.fandom.com/wiki/Private" target="_blank">Author 2</a></span>
+                  <a href="https://dreamworks-penguins.fandom.com/wiki/Private" target="_blank">AndyTheDandy</a></span>
                   <span class="author-block">
-                    <a href="https://dreamworks-penguins.fandom.com/wiki/Kowalski" target="_blank">Author 3</a>
+                    <a href="https://dreamworks-penguins.fandom.com/wiki/Kowalski" target="_blank">AlexTheSavage</a>
                   </span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">XYZ School</span>
+                    <span class="author-block">Colleyville Heritage High School</span>
                   </div>
 
                   <div class="column has-text-centered">
