--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 		<tr>
 			<td width=260px>
 				<center>
-					<img class="round" style="width:500px" src="fiery-furnace-archesNP"/>
+					<img class="round" style="width:500px" src="static/images/333CB0D3-E252-4BDC-9880-91C15981AC0D.heic"/>
 				</center>
 			</td>
 		</tr>
