--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 		<tr>
 			<td width=260px>
 				<center>
-					<img class="round" style="width:500px" src="static/Screen Shot 2023-06-14 at 2.28.57 PM.png"/>
+					<img class="round" style="width:500px" src="static/images/Screen Shot 2023-06-14 at 2.28.57 PM.png"/>
 				</center>
 			</td>
 		</tr>
